# middleware/authMiddleware.js
@@ -1,0 +1,19 @@
+const jwt = require("jsonwebtoken");
+
+const authenticateJWT = (req, res, next) => {
+    const token = req.header("Authorization");
+
+    if (!token) {
+        return res.status(401).json({ message: "Access Denied. No token provided." });
+    }
+
+    try {
+        const decoded = jwt.verify(token.split(" ")[1], process.env.JWT_SECRET);
+        req.user = decoded;
+        next();
+    } catch (err) {
+        return res.status(403).json({ message: "Invalid or expired token." });
+    }
+};
+
+module.exports = authenticateJWT;
