# routes/swagger.js
@@ -1,9 +1,35 @@
-const express = require("express");
+const express = require('express');
 const router = express.Router();
+const swaggerJsdoc = require("swagger-jsdoc");
 const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("../swagger.json");
 
-router.use("/api-docs", swaggerUi.serve);
-router.get("/api-docs", swaggerUi.setup(swaggerDocument));
+const options = {
+  definition: {
+    openapi: "3.0.0",
+    info: {
+      title: "Your API",
+      version: "1.0.0",
+      description: "API documentation with JWT authentication",
+    },
+    servers: [
+      {
+        url: "cse-341-project3-bqsu.onrender.com/api/data", // Change this to your server URL
+      },
+    ],
+    components: {
+      securitySchemes: {
+        BearerAuth: {
+          type: "https",
+          scheme: "bearer",
+          bearerFormat: "JWT",
+        },
+      },
+    },
+    security: [{ BearerAuth: [] }],
+  },
+  apis: ["./routes/*.js"], // Change this to the correct path of your route files
+};
 
-module.exports = router;
+const swaggerDocs = swaggerJsdoc(options);
+
+module.exports = router.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocs));
